--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --lightviolet-color: #c08cdb;
   --grey-color: #474748;
   --purple: #7506B1;
-  --white-color: #ffffff;
+  --white-color: #ffffff;  
   --light-color: #f1e6f7;
   --darkpurple-color: #53047e;
   --lightpurple: #f3e8ee;
@@ -307,6 +307,23 @@ body {
   font-weight: 500;
 }
 
+.btn-outline-primary {
+    --bs-btn-color: #7506B1;
+    --bs-btn-border-color: #7506B1;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #7506B1;
+    --bs-btn-hover-border-color: #7506B1;
+    --bs-btn-focus-shadow-rgb: 13, 110, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #7506B1;
+    --bs-btn-active-border-color: #7506B1;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #7506B1;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #7506B1;
+    --bs-gradient: none;
+}
+
 /* Grid layout for services */
 .services .services-grid {
   display: grid;
@@ -377,7 +394,7 @@ body {
   height: 48px;
   border-radius: 8px;
   background-color: white;
-  color: var(--purple);
+  color: var(--black-color);
   font-weight: 600;
   display: flex;
   align-items: center;
